# lea004-print-conet

./: .env.docker.example  .env.example  Dockerfile  README.md  composer.json  docker-compose.yml  docker-start.sh  package-lock.json  package.json
app/Console/: Kernel.php
app/Http/Controllers/: Controller.php  DocumentController.php  HomeController.php  KioskController.php  PageController.php  PaymentController.php  PriceControlller.php  TransactionController.php
app/Http/Middleware/: AdminOnly.php
app/Http/Requests/: DocumentRequest.php
app/Models/: Document.php  Payment.php  Price.php  PrinterActivity.php  Transaction.php  User.php
backend/: pyproject.toml
backend/coinslot/: README.md  coinslot.ino  index.js  main.py  package-lock.json  package.json
backend/print_api/printer/: cli.py  printing.py
backend/printer/: cli.py  office.py  pdf.py  printing.py
backend/printer/linux/: office.py  win32print.py
config/: app.php
database/factories/: DocumentFactory.php  PriceFactory.php  PrinterActivityFactory.php  TransactionFactory.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2024_03_19_182950_create_documents_table.php  2024_03_22_153901_create_documents_table.php  2024_03_22_155816_create_transactions_table.php  2024_03_24_152552_create_prices_table.php  2024_04_02_141349_create_payments_table.php  2024_04_06_190134_create_printer_activities_table.php
database/seeders/: DatabaseSeeder.php  DocumentSeeder.php  PrinterActivitySeeder.php
print_api/: pyproject.toml
print_api/printer/: cli.py  printing.py
public/assets/css/: argon-dashboard.css
public/assets/js/: argon-dashboard.js
resources/js/: app.js  custom.js
resources/scss/argon-dashboard/: _variables.scss
resources/views/auth/: login.blade.php  register.blade.php
resources/views/components/: alert.blade.php  file-iframe.blade.php  fixed-plugin.blade.php
resources/views/layouts/: app-kiosk.blade.php  app.blade.php
routes/: api.php  web.php
(+23 files in other folders)
