[tool.poetry]
name = "print-conet-backend"
version = "0.1.0"
description = "Print CoNet backend APIs"
authors = ["Louie Torres <lbtowers@proton.me>"]
readme = "README.md"
packages = [{ include = "printer" }, { include = "coinslot" }]

[tool.poetry.dependencies]
python = ">=3.10"
pywin32 = { version = "^306", platform = "win32" }
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
pypdf = "^4.1.0"
pyserial = "^3.5"
requests = "^2.31.0"
comtypes = { version = "^1.4.1", platform = "win32" }

[tool.poetry.scripts]
cli = 'printer.cli:main'
coinslot = 'coinslot.main:main'

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
